--- a/client/angular.json
+++ b/client/angular.json
@@ -30,7 +30,8 @@
               "./node_modules/font-awesome/css/font-awesome.min.css",
               "./node_modules/bootswatch/dist/lux/bootstrap.min.css",
               "node_modules/ngx-toastr/toastr.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-spinner/animations/ball-spin-rotate.css"
             ],
             "scripts": []
           },
