--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "hotReloadEnabled": false,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5094;https://localhost:5000",
+      "applicationUrl": "http://localhost:5094;https://localhost:5000;https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
